--- a/.github/workflows/publish_docs_to_wiki.yml
+++ b/.github/workflows/publish_docs_to_wiki.yml
@@ -62,6 +62,9 @@ jobs:
             --exclude '.gitattributes' \
             --exclude 'README.md' \
             --exclude 'LICENSE' \
+            --exclude 'wiki_orca_wiki/' \
+            --exclude 'wiki_orca/' \
+            --exclude 'logs_*/' \
             "$SRC_DIR"/ wiki_orca_wiki/
           cd wiki_orca_wiki
           git config user.name "github-actions[bot]"
@@ -92,6 +95,9 @@ jobs:
             --exclude '.gitattributes' \
             --exclude 'README.md' \
             --exclude 'LICENSE' \
+            --exclude 'wiki_orca_wiki/' \
+            --exclude 'wiki_orca/' \
+            --exclude 'logs_*/' \
             "$SRC_DIR"/ wiki_orca/
           cd wiki_orca
           git config user.name "github-actions[bot]"
